cmake_minimum_required(VERSION 3.23)
project(LeetCode_Cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(LeetCode_Cpp main.cpp array/array.h array/array_209.cpp array/matrix_59.cpp linked_list/linked_list.h linked_list/move_list_element_203.cpp linked_list/Init_list.cpp linked_list/design_list_707.cpp linked_list/reverse_list_206.cpp linked_list/swap_pairs_24.cpp linked_list/delete_Nst_list_19.cpp linked_list/intersect_list_160.cpp linked_list/ring_list_142.cpp hash_table/hash_table.h hash_table/anagrams_242.cpp)
